Fixed code to correct Java version.